--- a/style.css
+++ b/style.css
@@ -1,149 +1,208 @@
-body{
-    font-family: 'Roboto', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
-.header{
-    background-color: #1f2937;
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-}
-
-ul{
-    display: flex;
-    gap: 40px;
-    list-style-type: none;
-    margin: 10px 200px;
-}
-
-.header-logo-text{
-    font-size: 24px;
-    font-weight: bolder;
-    color: #F9FAF8;
-    margin: auto 200px;
-}
-
-.header-link-text {
-    font-size: 18px;
-    color: #E5E7EB;
-    display: flex;
-    justify-content: flex-end;
+body{
+    font-family: 'Roboto Slab', serif;
 }
 
 .part-one{
-    background-color: #1f2937;
-    display: flex;
-    justify-content: center;
-    padding: 50px;
+    background-color: #1F2937;
 }
 
-.left{
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    background-color: purple;
-    margin: auto 1px;
+#header-logo{
+    font-size: 24px;
+    font-weight: bold;
+    color: #F9FAF8;
 }
 
-#hero-image{
-    height: 400px;
+.header-link{
+    font-size: 18px;
+    margin: 10px;
+    color: #E6E7EB;
+}
+
+.navbar{
     display: flex;
+}
+
+ul{
+    list-style-type: none;
+    display: flex;
+}
+
+.navbar-left, .navbar-right{
+    display: flex;
+    width: 50%;
     justify-content: center;
-    align-items: flex-end;
-    margin: auto 500px;
-    background-color: yellow;
+    align-items: center;
 }
 
 .hero-main-text{
-    color: #F9FAF8;
     font-size: 48px;
     font-weight: bolder;
+    color: #F9FAF8;
 }
 
-.hero-secondary-text{
+.hero{
+    display: flex;
+    margin: 50px;
+}
+
+img{
+    margin: 50px;
+    width: 600px;
+    margin-right: 230px;
+}
+
+.hero-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+    margin-bottom: 100px;
+
+}
+
+.hero-left{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    margin-left: 360px;
+    margin-bottom: 100px;
+}
+
+.hero-paragraph{
     font-size: 18px;
-    color: #E5E7EB;
+    color: #E6E7EB;
 }
 
-.sign-up{
-    color: white;
+.sign-up-one{
     background-color: #3882F6;
-    border-radius: 8px;
-    font-size: 18px;
-    padding: 8px 20px;
-    border: none;
+    color: white;
+    width: 100px;
+    height: 40px;
+    border: #3882F6;
+    border-radius: 10px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
 .random{
-    color: #1f2937;
-    font-size: 36px;
+    font-size: 60px;
     font-weight: bolder;
-    margin: 40px;
-    display: flex;
-    justify-content: center;
+    color: #1F2937;
+    text-align: center;
+    margin: 40px auto;
 }
 
-.images, .info{
-    margin: 20px;
+.row{
     display: flex;
-    justify-content: space-around;
-    gap: 100px;
-    color: #1f2937;
+    justify-content: center;
+    gap: 50px;
+    margin-bottom: 100px;
+}
+
+.row-info{
+    color: #1F2937;
+    font-size: 36px;
+    text-align: center;
+}
+
+#nb{
+    height: 300px;
+    width: 300px;
+    margin: auto;
+    border: 10px solid transparent;
+    border-radius: 20px;
 }
 
 .part-three{
     background-color: #E5E7EB;
-    padding: 200px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .quote-text{
     font-size: 36px;
     font-style: italic;
     font-weight: lighter;
+    color: #1F2937;
+    text-align: center;
 }
 
 .quote-by{
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
-    display: flex;
-    justify-content: flex-end;
+    margin-left: 1150px;
+    margin-top: 25px;
 }
 
 .part-four{
-    background-color: #3882F6;
-    margin: 100px;
-    border-radius: 8px;
+    height: 400px;
     display: flex;
     justify-content: center;
-    padding: 40px;
+    align-items: center;
 }
 
-.info-header-text{
-    font-size: 36px;
-    color: #F9FAF8;
+.blue-container{
+    background-color: #3882F6;
+    width: 75%;
+    height: 50%;
+    border-radius: 10px;
+    display: flex;
 }
 
-.info-secondary-text{
+.blue-left{
+    width: 70%;
+    margin-left: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.blue-header{
+    color: white;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.blue-info{
+    color: white;
     font-size: 18px;
-    color: #E5E7EB;
+}
+
+.blue-right{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .sign-up1{
-    color: white;
     background-color: #3882F6;
-    border-radius: 8px;
-    font-size: 18px;
-    padding: 8px 20px;
-    border-color: #F9FAF8;
-    display: flex;
-    justify-content: flex-end;
+    color: white;
+    width: 100px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    border-radius: 10px;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-right: 40px;
 }
 
 .footer{
-    background-color: #1f2937;
-    color: #E5E7EB;
     display: flex;
     justify-content: center;
-    padding: 25px;
+    align-items: center;
+    background-color: #1F2937;
+    color: #ffffff;
+    height: 75px;
 }
